project('burrtools', 'cpp', 'c')

lua_src = [
  'lua/lapi.c',
  'lua/lapi.h',
  'lua/lauxlib.c',
  'lua/lauxlib.h',
  'lua/lcode.c',
  'lua/lcode.h',
  'lua/ldebug.c',
  'lua/ldebug.h',
  'lua/ldo.c',
  'lua/ldo.h',
  'lua/ldump.c',
  'lua/lfunc.c',
  'lua/lfunc.h',
  'lua/lgc.c',
  'lua/lgc.h',
  'lua/llex.c',
  'lua/llex.h',
  'lua/lmem.c',
  'lua/lmem.h',
  'lua/lobject.c',
  'lua/lobject.h',
  'lua/lopcodes.c',
  'lua/lopcodes.h',
  'lua/lparser.c',
  'lua/lparser.h',
  'lua/lstate.c',
  'lua/lstate.h',
  'lua/lstring.c',
  'lua/lstring.h',
  'lua/ltable.c',
  'lua/ltable.h',
  'lua/ltm.c',
  'lua/ltm.h',
  'lua/lundump.c',
  'lua/lundump.h',
  'lua/lvm.c',
  'lua/lvm.h',
  'lua/lzio.c',
  'lua/lzio.h',
  'lua/luaclass.cpp',
  'lua/luaclass.h',
  'lua/llimits.h',
  'lua/luaconf.h',
  'lua/lua.h'
]

tools_src = [
  'tools/fileexists.cpp',
  'tools/fileexists.h',
  'tools/gzstream.cpp',
  'tools/gzstream.h',
  'tools/intdiv.h',
  'tools/xml.cpp',
  'tools/xml.h'
]

halfedge_src = [
  'halfedge/face.cpp', 'halfedge/face.h',
  'halfedge/halfedge.cpp', 'halfedge/halfedge.h',
  'halfedge/modifiers.cpp', 'halfedge/modifiers.h',
  'halfedge/polyhedron.cpp', 'halfedge/polyhedron.h',
  'halfedge/polyhedron_iterators.h',
  'halfedge/vector3.cpp', 'halfedge/vector3.h',
  'halfedge/vertex.cpp', 'halfedge/vertex.h',
  'halfedge/volume.cpp', 'halfedge/volume.h'
]

libburr_src = [
  'lib/assembler.cpp',
  'lib/assembler.h',
  'lib/assembler_0.cpp',
  'lib/assembler_0.h',
  'lib/assembler_1.cpp',
  'lib/assembler_1.h',
  'lib/assembly.cpp',
  'lib/assembly.h',
  'lib/bitfield.h',
  'lib/bt_assert.cpp',
  'lib/bt_assert.h',
  'lib/burrgrower.cpp',
  'lib/burrgrower.h',
  'lib/converter.cpp',
  'lib/converter.h',
  'lib/disassembler.h',
  'lib/disassembler_0.cpp',
  'lib/disassembler_0.h',
  'lib/disassembler_a.cpp',
  'lib/disassembler_a.h',
  'lib/disassemblerhashes.cpp',
  'lib/disassemblerhashes.h',
  'lib/disassemblernode.cpp',
  'lib/disassemblernode.h',
  'lib/disassembly.cpp',
  'lib/disassembly.h',
  'lib/disasmtomoves.cpp',
  'lib/disasmtomoves.h',
  'lib/gridtype.cpp',
  'lib/gridtype.h',
  'lib/grouping.cpp',
  'lib/grouping.h',
  'lib/millable.cpp',
  'lib/millable.h',
  'lib/movementanalysator.cpp',
  'lib/movementanalysator.h',
  'lib/movementcache.cpp',
  'lib/movementcache.h',
  'lib/movementcache_0.cpp',
  'lib/movementcache_0.h',
  'lib/movementcache_1.cpp',
  'lib/movementcache_1.h',
  'lib/print.cpp',
  'lib/print.h',
  'lib/ps3dloader.cpp',
  'lib/ps3dloader.h',
  'lib/problem.cpp',
  'lib/problem.h',
  'lib/puzzle.cpp',
  'lib/puzzle.h',
  'lib/solution.cpp',
  'lib/solution.h',
  'lib/solvethread.cpp',
  'lib/solvethread.h',
  'lib/stl.cpp',
  'lib/stl.h',
  'lib/stl_0.cpp',
  'lib/stl_0.h',
  'lib/stl_2.cpp',
  'lib/stl_2.h',
  'lib/symmetries.h',
  'lib/symmetries_0.cpp',
  'lib/symmetries_0.h',
  'lib/symmetries_1.cpp',
  'lib/symmetries_1.h',
  'lib/symmetries_2.cpp',
  'lib/symmetries_2.h',
  'lib/thread.cpp',
  'lib/thread.h',
  'lib/types.h',
  'lib/voxel.cpp',
  'lib/voxel.h',
  'lib/voxel_0.cpp',
  'lib/voxel_0.h',
  'lib/voxel_1.cpp',
  'lib/voxel_1.h',
  'lib/voxel_2.cpp',
  'lib/voxel_2_mesh.cpp',
  'lib/voxel_2.h',
  'lib/voxel_3.cpp',
  'lib/voxel_3.h',
  'lib/voxel_4.cpp',
  'lib/voxel_4.h',
  'lib/voxeltable.cpp',
  'lib/voxeltable.h',
]

flu_src = [
  'flu/Flu_Button.cpp',
  'flu/Flu_Button.h',
  'flu/Flu_Combo_Box.cpp',
  'flu/Flu_Combo_Box.h',
  'flu/Flu_Combo_List.cpp',
  'flu/Flu_Combo_List.h',
  'flu/Flu_Combo_Tree.cpp',
  'flu/Flu_Combo_Tree.h',
  'flu/Flu_Enumerations.h',
  'flu/flu_export.h',
  'flu/Flu_File_Chooser.cpp',
  'flu/Flu_File_Chooser.h',
  'flu/flu_file_chooser_pixmaps.cpp',
  'flu/flu_file_chooser_pixmaps.h',
  'flu/Flu_Label.h',
  'flu/Flu_Label.cpp',
  'flu/flu_pixmaps.cpp',
  'flu/flu_pixmaps.h',
  'flu/Flu_Return_Button.cpp',
  'flu/Flu_Return_Button.h',
  'flu/Flu_Separator.cpp',
  'flu/Flu_Separator.h',
  'flu/FluSimpleString.cpp',
  'flu/FluSimpleString.h',
  'flu/Flu_Tree_Browser.cpp',
  'flu/Flu_Tree_Browser.h',
  'flu/FluVectorClass.h',
  'flu/Flu_Wrap_Group.cpp',
  'flu/Flu_Wrap_Group.h',
]



gui_src = [
  'tools/homedir.cpp',
  'tools/homedir.h',
  
  'gui/arcball.cpp',
  'gui/arcball.h',
  'gui/assertwindow.cpp',
  'gui/assertwindow.h',
  'gui/assmimportwindow.cpp',
  'gui/assmimportwindow.h',
  'gui/blocklistgroup.cpp',
  'gui/blocklistgroup.h',
  'gui/buttongroup.cpp',
  'gui/buttongroup.h',
  'gui/configuration.cpp',
  'gui/configuration.h',
  'gui/constraintsgroup.cpp',
  'gui/constraintsgroup.h',
  'gui/convertwindow.cpp',
  'gui/convertwindow.h',
  'gui/grideditor.cpp',
  'gui/grideditor.h',
  'gui/grideditor_0.cpp',
  'gui/grideditor_0.h',
  'gui/grideditor_1.cpp',
  'gui/grideditor_1.h',
  'gui/grideditor_2.cpp',
  'gui/grideditor_2.h',
  'gui/grideditor_3.cpp',
  'gui/grideditor_3.h',
  'gui/grideditor_4.cpp',
  'gui/grideditor_4.h',
  'gui/gridtypegui.cpp',
  'gui/gridtypegui.h',
  'gui/groupseditor.cpp',
  'gui/groupseditor.h',
  'gui/guigridtype.cpp',
  'gui/guigridtype.h',
  'gui/image.cpp',
  'gui/image.h',
  'gui/imageexport.cpp',
  'gui/imageexport.h',
  'gui/main.cpp',
  'gui/mainwindow.cpp',
  'gui/mainwindow.h',
  'gui/movementbrowser.cpp',
  'gui/movementbrowser.h',
  'gui/multilinewindow.cpp',
  'gui/multilinewindow.h',
  'gui/piececolor.cpp',
  'gui/piececolor.h',
  'gui/placementbrowser.cpp',
  'gui/placementbrowser.h',
  'gui/resultviewer.cpp',
  'gui/resultviewer.h',
  'gui/separator.cpp',
  'gui/separator.h',
  'gui/statusline.cpp',
  'gui/statusline.h',
  'gui/statuswindow.cpp',
  'gui/statuswindow.h',
  'gui/stlexport.cpp',
  'gui/stlexport.h',
  'gui/togglebutton.cpp',
  'gui/togglebutton.h',
  'gui/tooltabs.cpp',
  'gui/tooltabs.h',
  'gui/vectorexportwindow.cpp',
  'gui/vectorexportwindow.h',
  'gui/view3dgroup.cpp',
  'gui/view3dgroup.h',
  'gui/voxelframe.cpp',
  'gui/voxelframe.h',
  'gui/voxeleditgroup.cpp',
  'gui/voxeleditgroup.h',
  'gui/BlockList.cpp',
  'gui/BlockList.h',
  'gui/WindowWidgets.h',
  'gui/Fl_Table.cpp',
  'gui/Fl_Table.h',
  'gui/LFl_Tile.cpp',
  'gui/LFl_Tile.h',
  'gui/Layouter.cpp',
  'gui/Layouter.h',
  'gui/tr.c',
  'gui/tr.h',
  'gui/gl2ps.c',
  'gui/gl2ps.h',
  'gui/Images.cpp',
  'gui/Images.h',
]

# help/helpdata.cpp: $(EXTRA_DIST) help/data2c.cpp
# 	cd help; g++ data2c.cpp -O2 -o data2c `fltk-config --cxxflags --ldflags --use-images`
# 	cd help; ./data2c helpdata.cpp ../../doc/html/*.html - ../../doc/html/*.png
# 	cd help; $(RM) data2c


# gen_src = custom_target('gen-output',
#                         input : ['somefile1.c', 'file2.c'],
#                         output : ['help/helpdata.cpp'],
#                         command : [data2c, '@INPUT@',
#                                    '--c-out', '@OUTPUT0@',
#                                    '--h-out', '@OUTPUT1@'])	
	
help_src = [
  'help/Fl_Help_Dialog.cpp',
  'help/Fl_Help_Dialog.h',
  'help/Fl_Help_View.cpp',
  'help/Fl_Help_View.h',
  'help/flstring.cpp',
  'help/flstring.h',
  'help/helpdata.h',
  'help/helpdata.cpp'
]

boost_dep = dependency('boost', modules: ['thread'])
gl_dep = dependency('gl')
glu_dep = dependency('glu')
zlib_dep = dependency('zlib')
libpng_dep = dependency('libpng')

cxx = meson.get_compiler('cpp')
fltk_dep = cxx.find_library('fltk')
fltkgl_dep = cxx.find_library('fltk_gl')

fltkimages_dep = cxx.find_library('fltk_images')

data2c = executable('data2c', 'help/data2c.cpp', dependencies: [fltk_dep, fltkimages_dep])



executable('burrTxt',  tools_src + halfedge_src + libburr_src + ['burrTxt.cpp'],
 	   dependencies: [boost_dep, zlib_dep])

executable('burrTxt2',  tools_src + halfedge_src + libburr_src + ['burrTxt2.cpp'],
 	   dependencies: [boost_dep, zlib_dep])

executable('burrtools', lua_src + tools_src + flu_src + gui_src + help_src + halfedge_src + libburr_src,
 	   dependencies: [boost_dep, zlib_dep, gl_dep, glu_dep, fltk_dep, fltkgl_dep, libpng_dep])
